<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <!--appName-->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="40dp"
        android:layout_weight="1"/>

    <!--Percentages-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_weight="2">

        <!--columna 1-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_weight="2">

            <!--fila1-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="left"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Quices"
                    android:textSize="25dp"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/Quince"
                    android:textSize="25dp"
                    android:id="@+id/eQuiz"
                    android:layout_weight="1"/>
                </LinearLayout>

            <!--fila2-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="left"
                android:layout_weight="100">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Practicas"
                    android:gravity="right"
                    android:textSize="25dp"
                    android:layout_weight="2"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/Cuarenta"
                    android:gravity="center"
                    android:textSize="25dp"
                    android:id="@+id/ePract"
                    android:layout_weight="2"/>
                </LinearLayout>

        </LinearLayout>

        <!--columna2-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Exposiciones"
                android:gravity="center"
                android:textSize="25dp"
                android:layout_weight="1"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Diez"
                android:gravity="center"
                android:textSize="30dp"
                android:id="@+id/eExpos"
                android:layout_weight="2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Proyecto"
                android:textAlignment="center"
                android:textSize="25dp"
                android:layout_weight="1"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Treintaycinco"
                android:textAlignment="center"
                android:textSize="30dp"
                android:id="@+id/eProyFin"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

         <!--botonCalcular-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc"
            android:textSize="30dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:id="@+id/bCalc"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NotFin"
                android:textAlignment="center"
                android:textSize="30dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="30dp"
                android:id="@+id/eResult"
                android:layout_weight="500"/>


            </LinearLayout>

    </LinearLayout>



